Solve the 06-flex-layout problem by adding proper css and fixing html

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,22 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  border:5px solid black;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+height: inherit;
+
+
 }
 
 img {
   width: 600px;
+
+
 }
 
 button {
@@ -23,4 +35,40 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+ul{
+  list-style-type: none;
+  display: flex;
+  gap:15px;
+}
+
+ul.left-links{
+  padding-inline-start: 10px;
+}
+
+ul.right-links{
+  padding-inline-end: 10px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+
+  
+}
+
+.footer{
+  background-color: #eee;
+  display: flex;
+  justify-content: space-between;
+
 }
